Fixed contact form font alignment

--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -259,7 +259,7 @@ Logo at top of page
 	color: var(--redwoodGreyDark);
 }
 
-.redwoodLightGrey{
+.redwoodLightGreyCol{
 	color: var(--redwoodGreyLight);
 }
 
